--- a/src/app.json
+++ b/src/app.json
@@ -4,7 +4,8 @@
     "pages/index/index",
     "pages/rank/rank",
     "pages/player/player",
-    "pages/recentPlay/recentPlay"
+    "pages/recentPlay/recentPlay",
+    "pages/search/search"
   ],
   "window": {
     "backgroundTextStyle": "light",
