fix：添加排行版 ui，各个页面添加播放器组件

--- a/src/app.json
+++ b/src/app.json
@@ -6,7 +6,8 @@
     "pages/player/player",
     "pages/recentPlay/recentPlay",
     "pages/search/search",
-    "pages/songSheet/songSheet"
+    "pages/songSheet/songSheet",
+    "pages/rankDetail/rankDetail"
   ],
   "window": {
     "backgroundTextStyle": "light",
