--- a/src/app.json
+++ b/src/app.json
@@ -9,6 +9,10 @@
     "pages/songSheet/songSheet",
     "pages/rankDetail/rankDetail"
   ],
+  "requiredBackgroundModes": [
+    "audio",
+    "location"
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
